--- a/.gitignore
+++ b/.gitignore
@@ -286,3 +286,5 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
+BoardGames/BoardGames/appsettings.Development.json
+BoardGames/BoardGames/appsettings.json
